k8s/master-service.yaml
# ClusterIP Service - Internal access to Master (master-svc:8080)
apiVersion: v1
kind: Service
metadata:
  name: master-svc
  namespace: simcluster
  labels:
    app: master
    component: control-plane
spec:
  type: ClusterIP
  selector:
    app: master
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
